[gd_scene load_steps=6 format=3 uid="uid://c55gh5wwb8v2y"]

[ext_resource type="Script" path="res://gui/gui.gd" id="1_u6qhg"]
[ext_resource type="PackedScene" uid="uid://djqs4n3g0knt2" path="res://gui/hand.tscn" id="2_6tk7o"]
[ext_resource type="PackedScene" uid="uid://ctxfndygcy7ce" path="res://gui/text_rectangle.tscn" id="2_lx4tv"]
[ext_resource type="PackedScene" uid="uid://b0hgoap3fcyrf" path="res://deck/deck.tscn" id="3_ae7tt"]
[ext_resource type="Texture2D" uid="uid://dvfobv12652bd" path="res://assets/textures/crossairs.png" id="4_6frls"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u6qhg")

[node name="VSplitContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
color = Color(1, 0.380392, 1, 0.0431373)

[node name="PlayerStatus" type="HBoxContainer" parent="VSplitContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="PlayerTitle" parent="VSplitContainer/PlayerStatus" instance=ExtResource("2_lx4tv")]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Player
"

[node name="HealthText" parent="VSplitContainer/PlayerStatus" instance=ExtResource("2_lx4tv")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Health
"

[node name="ShieldText" parent="VSplitContainer/PlayerStatus" instance=ExtResource("2_lx4tv")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Shield
"

[node name="ManaText" parent="VSplitContainer/PlayerStatus" instance=ExtResource("2_lx4tv")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "
"

[node name="HandRect" type="ColorRect" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.247059, 0.223529, 1, 1)

[node name="Deck" parent="VSplitContainer/HandRect" instance=ExtResource("3_ae7tt")]
visible = false
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/HandRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChuckButton" type="Button" parent="VSplitContainer/HandRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chuck and Refill Hand
(Click here)
(Press Space)"
text_overrun_behavior = 3

[node name="Hand" parent="VSplitContainer/HandRect/HBoxContainer" instance=ExtResource("2_6tk7o")]
layout_mode = 2

[node name="Crossairs" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.478431, 1, 1, 1)
z_index = 1
texture = ExtResource("4_6frls")

[connection signal="pressed" from="VSplitContainer/HandRect/HBoxContainer/ChuckButton" to="VSplitContainer/HandRect/HBoxContainer/Hand" method="try_chuck_hand_timer"]
[connection signal="card_discarded" from="VSplitContainer/HandRect/HBoxContainer/Hand" to="." method="_on_hand_card_discarded"]
[connection signal="card_used" from="VSplitContainer/HandRect/HBoxContainer/Hand" to="." method="_on_hand_card_used"]
[connection signal="chucked_card" from="VSplitContainer/HandRect/HBoxContainer/Hand" to="." method="_on_hand_chucked_card"]
[connection signal="filled_hand" from="VSplitContainer/HandRect/HBoxContainer/Hand" to="." method="_on_hand_filled_hand"]
[connection signal="get_card" from="VSplitContainer/HandRect/HBoxContainer/Hand" to="VSplitContainer/HandRect/Deck" method="give_card"]
[connection signal="mana_changed" from="VSplitContainer/HandRect/HBoxContainer/Hand" to="." method="_on_hand_mana_changed"]
